--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^4.2.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-chartjs2": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
